Fix video preview height and improve readability

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -360,7 +360,7 @@ input:focus {
     .column-left {
       font-family: 'Source Sans Pro', sans-serif;
       font-size: .95em;
-      font-weight: 300;
+      font-weight: 400;
       color: #333333;
     }
     .column-right {
@@ -371,8 +371,9 @@ input:focus {
         background-size: cover;
         background-position: center;
         width: 100%;
-        height: 50px;
-        margin-bottom: 15px;
+        height: 180px;
+        margin-bottom: 1em;
+        margin-top: 1em;
       }
       a.gallery-button {
         display: block;
